CharacterActionMotion integrated in CharacterAction and subsequent logic